EKS setup/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: stage-demo # Namespace set to "jenkins"
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: '/'
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000  # Choose a suitable NodePort value, typically in the range 30000-32767
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000
